@@ -871,14 +871,19 @@ _edje_embryo_fn_set_state(Embryo_Program *ep, Embryo_Cell *params)
    double value = 0.0;
    Edje_Real_Part *rp;
 
-   CHKPARAM(3);
+   if (!HASNPARAMS(2) || !HASNPARAMS(3)) return -1;
    ed = embryo_program_data_get(ep);
    GETSTR(state, params[2]);
    if ((!state)) return 0;
    part_id = params[1];
    if (part_id < 0) return 0;
-   f = EMBRYO_CELL_TO_FLOAT(params[3]);
-   value = (double)f;
+   if (HASNPARAMS(3))
+     {
+	f = EMBRYO_CELL_TO_FLOAT(params[3]);
+	value = (double)f;
+     }
+   else
+     value = 0.0;
    rp = ed->table_parts[part_id % ed->table_parts_size];
    if (rp)
      {
