@@ -1,3 +1,7 @@
+2012-06-06  Leandro Pereira
+
+        * Made state index optional (defaulting to 0.0).
+
 2011-01-29  Carsten Haitzler (The Rasterman)
 
         1.0.0 release
